@@ -459,9 +459,11 @@ class TestsCount_N(unittest.TestCase, Util):
         self.assertEqual(count_n(a, 10, 0), 47)
         self.assertRaisesMessage(ValueError, "non-negative integer expected",
                                  count_n, a, -1, 0) # n < 0
-        self.assertRaisesMessage(ValueError, "n larger than bitarray size",
+        self.assertRaisesMessage(ValueError,
+                                 "n (49) larger than bitarray size (48)",
                                  count_n, a, 49, 0) # n > len(a)
-        self.assertRaisesMessage(ValueError, "n exceeds total count",
+        self.assertRaisesMessage(ValueError,
+                                 "n (12) exceeds total count (11)",
                                  count_n, a, 12, 0) # n > a.count(0)
 
         self.assertEqual(count_n(a, 0), 0)
@@ -470,9 +472,11 @@ class TestsCount_N(unittest.TestCase, Util):
         self.assertEqual(count_n(a, 37), 45)
         self.assertRaisesMessage(ValueError, "non-negative integer expected",
                                  count_n, a, -1) # n < 0
-        self.assertRaisesMessage(ValueError, "n larger than bitarray size",
+        self.assertRaisesMessage(ValueError,
+                                 "n (49) larger than bitarray size (48)",
                                  count_n, a, 49) # n > len(a)
-        self.assertRaisesMessage(ValueError, "n exceeds total count",
+        self.assertRaisesMessage(ValueError,
+                                 "n (38) exceeds total count (37)",
                                  count_n, a, 38) # n > a.count()
 
         for v in 0, 1:
